{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "InGame",
            "id": "0ad82b76-d697-493d-bbdb-2c08115d80f4",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "3a5a5958-4e91-495a-a9aa-d648cf064037",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "d25cb6ab-21e1-42b2-8811-1776c6497d4d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CameraMove",
                    "type": "Value",
                    "id": "5122e01d-44e9-4b0d-9a70-70b203e08482",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Dance",
                    "type": "Button",
                    "id": "92f4b075-cbf1-4a37-b3f0-4c780161ed12",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "af1f5617-10d3-4800-9b4b-1f76ea9a0578",
                    "path": "2DVector(mode=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e9d59f35-31d1-4ceb-8fcc-ff8aeba63e4b",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "84617d33-b6c0-475d-ac08-f89d5bab9a3e",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "82a62648-3e30-48b3-a28c-f9a8a6f30363",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "b5f0206c-b3cc-41bb-ad00-af129a0b9731",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "8234284c-d64e-479b-9eaa-05c30cf6cb99",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "96916b9a-dcc4-4547-8907-5f3da40286be",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "90606164-fa56-4950-975f-7106ddb94b55",
                    "path": "<Mouse>/delta/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "4357417e-031f-47bc-8b79-3e88311f022b",
                    "path": "<Mouse>/delta/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "74a52e62-6a34-4a28-b439-fdd1ce8f20f3",
                    "path": "<Mouse>/delta/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "e14ee95f-25d1-4378-a079-74992de6daa1",
                    "path": "<Mouse>/delta/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "e9eca433-3993-4a3e-b4a5-fccf90e4c83b",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dance",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}